smoother background color in templates from github pages

--- a/templates/calendar_view.html
+++ b/templates/calendar_view.html
@@ -2,6 +2,7 @@
     body {
         font: 10px sans-serif;
         shape-rendering: crispEdges;
+        background: #f2f2f2;
     }
     .day {
         fill: #fff;
