--- a/templates/cooccurrences-graph.html
+++ b/templates/cooccurrences-graph.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <style>
+    body {
+        background: #f2f2f2;
+    }
     .node {
         stroke: #fff;
         stroke-width: 1.5px;
