--- a/templates/treemap.html
+++ b/templates/treemap.html
@@ -10,6 +10,7 @@
             margin: 0;
             font-size: 14px;
             font-family: "Helvetica Neue", Helvetica,serif;
+            background: #f2f2f2;
         }
 
         #chart, #header, #footer {
