--- a/templates/wordcloud.html
+++ b/templates/wordcloud.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<meta charset="utf-8">
+<style>
+    body {
+        background: #f2f2f2;
+    }
+</style>
 <!--TODO diff d3.v2.min-2.js with existing d3 lib-->
 <script src="d3.v2.min-2.js"></script>
 <script src="d3.layout.cloud.js"></script>
