--- a/templates/wordcloud.html
+++ b/templates/wordcloud.html
@@ -9,43 +9,55 @@
 <script src="d3.v2.min-2.js"></script>
 <script src="d3.layout.cloud.js"></script>
 <body>
+    <span id="wordCloud"></span>
+</body>
 <script>
-    var solidFill = d3.scale.category10();
-    var mixedFill = d3.scale.category20();
-    var width = 1200;
-    var height = 900;
-
-    var lastFiles = [];
-    var cloudType = window.location.search.replace( "?", "" );
-
     var data = /*data_placeholder*/
     {
         words: [
             {text: "aaa", size: 300},
+            {text: "aaa2", size: 300},
+            {text: "aaa3", size: 300},
             {text: "bbb", size: 200},
-            {text: "ccc", size: 100}
+            {text: "bbb2", size: 200},
+            {text: "bbb3", size: 200},
+            {text: "ccc", size: 100},
+            {text: "ccc2", size: 100},
+            {text: "ccc3", size: 100}
         ]
     }/*data_placeholder*/;
 
-    adjustSizeOfShortWords(data.words);
-    normalizeWordSize(data.words);
-    createWordCloud();
+    createWordCloudOn("wordCloud");
 
-    function createWordCloud() {
-        d3.layout.cloud()
-                .timeInterval(10)
-                .size([width, height])
-                .font("Impact")
-                .fontSize(function(d) { return d.size; })
-                .rotate(function(d) { return 0; })
-                .words(data.words.map(function(d) {
-                    return {text: d.text, size: d.size};
-                }))
-                .on("end", draw)
-                .start();
+    function createWordCloudOn(elementId) {
+        var solidFill = d3.scale.category10();
+        var mixedFill = d3.scale.category20();
+        var width = 1200;
+        var height = 900;
+
+        var rootElement = d3.select("#" + elementId);
+
+        adjustSizeOfShortWords(data.words);
+        normalizeWordSize(data.words);
+        createWordCloud();
+
+        function createWordCloud() {
+            d3.layout.cloud()
+                    .timeInterval(10)
+                    .size([width, height])
+                    .font("Impact")
+                    .fontSize(function(d) { return d.size; })
+                    .rotate(function(d) { return 0; })
+                    .words(data.words.map(function(d) {
+                        return {text: d.text, size: d.size};
+                    }))
+                    .on("end", draw)
+                    .start();
+        }
+
         function draw(words) {
-            d3.select("svg").remove();
-            d3.select("body").append("svg")
+            rootElement.select("svg").remove();
+            rootElement.append("svg")
                     .attr("width", width)
                     .attr("height", height)
                     .append("g")
@@ -78,22 +90,20 @@
                         }
                     });
         }
-    }
 
-    function adjustSizeOfShortWords(words) {
-        words.forEach(function (word) {
-            if (word.text.length < 5) word.size = (word.size * 1.3);
-        });
-    }
+        function adjustSizeOfShortWords(words) {
+            words.forEach(function (word) {
+                if (word.text.length < 5) word.size = (word.size * 1.3);
+            });
+        }
 
-    function normalizeWordSize(words) {
-        var min = d3.min(words, function (d) { return d.size; });
-        var max = d3.max(words, function (d) { return d.size; });
-        var range = (max != min ? max - min : 1);
-        console.log(words);
-        words.forEach(function (word) {
-            word.size = Math.round(5 + ((word.size - min) * 100 / range));
-        });
+        function normalizeWordSize(words) {
+            var min = d3.min(words, function (d) { return d.size; });
+            var max = d3.max(words, function (d) { return d.size; });
+            var range = (max != min ? max - min : 1);
+            words.forEach(function (word) {
+                word.size = Math.round(5 + ((word.size - min) * 100 / range));
+            });
+        }
     }
-
 </script>
