misc template tweaks

--- a/templates/calendar_view.html
+++ b/templates/calendar_view.html
@@ -3,6 +3,7 @@
         shape-rendering: crispEdges;
         background: #f2f2f2;
         margin: 30px;
+        margin-bottom: 60px;
         font: 10px sans-serif;
         font-family: 'Lucida Grande','Calibri',Helvetica,Arial,sans-serif;
     }
