--- a/templates/cooccurrences-graph.html
+++ b/templates/cooccurrences-graph.html
@@ -132,6 +132,7 @@ const graph = {
     ]
 /*data_placeholder*/
 };
+var projectName = /*project_name_placeholder*/"some project"/*project_name_placeholder*/;
 
 function createForcesGraphOn(elementId, graph) {
     function QuickFind(size) {
@@ -169,7 +170,7 @@ function createForcesGraphOn(elementId, graph) {
     var rootElement = d3.select("#" + elementId);
 
     var header = appendBlockElementTo(rootElement, width);
-    header.append("h2").text("Files in the same commit").style({"text-align": "center"});
+    header.append("h2").text("Files in the same commit (" + projectName + ")").style({"text-align": "center"});
 
     var svg = rootElement.append("svg")
             .attr("width", width).attr("height", height);
