attempt to make wordcloud look better

--- a/templates/wordcloud.html
+++ b/templates/wordcloud.html
@@ -15,19 +15,186 @@
 </body>
 <script>
     var data = /*data_placeholder*/
-    {
-        words: [
-            {text: "aaa", size: 300},
-            {text: "aaa2", size: 300},
-            {text: "aaa3", size: 300},
-            {text: "bbb", size: 200},
-            {text: "bbb2", size: 200},
-            {text: "bbb3", size: 200},
-            {text: "ccc", size: 100},
-            {text: "ccc2", size: 100},
-            {text: "ccc3", size: 100}
-        ]
-    }/*data_placeholder*/;
+            {"words": [
+                {"text": "kent", "size": 188},
+                {"text": "test", "size": 177},
+                {"text": "added", "size": 160},
+                {"text": "org", "size": 122},
+                {"text": "junit", "size": 111},
+                {"text": "javadoc", "size": 105},
+                {"text": "fixed", "size": 99},
+                {"text": "nsigned", "size": 97},
+                {"text": "threeriversinstitute", "size": 93},
+                {"text": "beck", "size": 90},
+                {"text": "tests", "size": 80},
+                {"text": "release", "size": 75},
+                {"text": "fix", "size": 74},
+                {"text": "removed", "size": 68},
+                {"text": "method", "size": 68},
+                {"text": "methods", "size": 67},
+                {"text": "issue", "size": 66},
+                {"text": "version", "size": 63},
+                {"text": "class", "size": 62},
+                {"text": "remove", "size": 58},
+                {"text": "message", "size": 53},
+                {"text": "exception", "size": 52},
+                {"text": "build", "size": 51},
+                {"text": "notes", "size": 51},
+                {"text": "com", "size": 50},
+                {"text": "code", "size": 47},
+                {"text": "use", "size": 47},
+                {"text": "updated", "size": 43},
+                {"text": "now", "size": 43},
+                {"text": "fixes", "size": 43},
+                {"text": "rule", "size": 43},
+                {"text": "make", "size": 42},
+                {"text": "can", "size": 42},
+                {"text": "new", "size": 39},
+                {"text": "more", "size": 38},
+                {"text": "all", "size": 38},
+                {"text": "classes", "size": 38},
+                {"text": "java", "size": 37},
+                {"text": "name", "size": 37},
+                {"text": "run", "size": 36},
+                {"text": "changes", "size": 35},
+                {"text": "ncommit", "size": 35},
+                {"text": "nauthor", "size": 35},
+                {"text": "kcooney", "size": 35},
+                {"text": "ndate", "size": 35},
+                {"text": "runner", "size": 35},
+                {"text": "was", "size": 31},
+                {"text": "xml", "size": 31},
+                {"text": "tibor", "size": 31},
+                {"text": "if", "size": 30},
+                {"text": "parentrunner", "size": 30},
+                {"text": "better", "size": 29},
+                {"text": "add", "size": 28},
+                {"text": "some", "size": 28},
+                {"text": "only", "size": 28},
+                {"text": "used", "size": 28},
+                {"text": "hamcrest", "size": 28},
+                {"text": "feb", "size": 27},
+                {"text": "error", "size": 27},
+                {"text": "public", "size": 27},
+                {"text": "before", "size": 27},
+                {"text": "documentation", "size": 26},
+                {"text": "using", "size": 26},
+                {"text": "should", "size": 26},
+                {"text": "changed", "size": 26},
+                {"text": "constructor", "size": 26},
+                {"text": "todo", "size": 26},
+                {"text": "actual", "size": 25},
+                {"text": "expectedexception", "size": 25},
+                {"text": "suite", "size": 25},
+                {"text": "case", "size": 24},
+                {"text": "update", "size": 24},
+                {"text": "after", "size": 24},
+                {"text": "description", "size": 24},
+                {"text": "have", "size": 23},
+                {"text": "parameters", "size": 23},
+                {"text": "parameter", "size": 23},
+                {"text": "do", "size": 22},
+                {"text": "exceptions", "size": 22},
+                {"text": "kevin", "size": 22},
+                {"text": "cooney", "size": 22},
+                {"text": "google", "size": 22},
+                {"text": "you", "size": 22},
+                {"text": "change", "size": 22},
+                {"text": "order", "size": 22},
+                {"text": "cleanup", "size": 21},
+                {"text": "this", "size": 21},
+                {"text": "the", "size": 21},
+                {"text": "equality", "size": 21},
+                {"text": "object", "size": 21},
+                {"text": "matcher", "size": 21},
+                {"text": "timeout", "size": 20},
+                {"text": "theory", "size": 20},
+                {"text": "unnecessary", "size": 20},
+                {"text": "need", "size": 20},
+                {"text": "default", "size": 20},
+                {"text": "link", "size": 19},
+                {"text": "annotation", "size": 19},
+                {"text": "theories", "size": 19},
+                {"text": "one", "size": 19},
+                {"text": "instead", "size": 19},
+                {"text": "null", "size": 19},
+                {"text": "assert", "size": 19},
+                {"text": "bug", "size": 19},
+                {"text": "parameterized", "size": 18},
+                {"text": "there", "size": 18},
+                {"text": "improved", "size": 18},
+                {"text": "also", "size": 18},
+                {"text": "empty", "size": 17},
+                {"text": "final", "size": 17},
+                {"text": "failed", "size": 17},
+                {"text": "jar", "size": 17},
+                {"text": "has", "size": 17},
+                {"text": "maven", "size": 17},
+                {"text": "names", "size": 17},
+                {"text": "comment", "size": 17},
+                {"text": "file", "size": 17},
+                {"text": "expected", "size": 17},
+                {"text": "thrown", "size": 17},
+                {"text": "refactoring", "size": 16},
+                {"text": "nthis", "size": 16},
+                {"text": "annotations", "size": 16},
+                {"text": "moved", "size": 16},
+                {"text": "static", "size": 16},
+                {"text": "line", "size": 16},
+                {"text": "github", "size": 16},
+                {"text": "package", "size": 16},
+                {"text": "does", "size": 16},
+                {"text": "allow", "size": 16},
+                {"text": "adding", "size": 16},
+                {"text": "assertequals", "size": 16},
+                {"text": "work", "size": 16},
+                {"text": "task", "size": 16},
+                {"text": "deleted", "size": 16},
+                {"text": "datapoints", "size": 15},
+                {"text": "merge", "size": 15},
+                {"text": "its", "size": 15},
+                {"text": "don", "size": 15},
+                {"text": "throw", "size": 15},
+                {"text": "nthe", "size": 15},
+                {"text": "classrunner", "size": 15},
+                {"text": "testrule", "size": 15},
+                {"text": "duplication", "size": 15},
+                {"text": "clean", "size": 15},
+                {"text": "branch", "size": 14},
+                {"text": "their", "size": 14},
+                {"text": "style", "size": 14},
+                {"text": "issues", "size": 14},
+                {"text": "digana", "size": 14},
+                {"text": "lycos", "size": 14},
+                {"text": "implementation", "size": 14},
+                {"text": "kentbeck", "size": 14},
+                {"text": "fixing", "size": 14},
+                {"text": "will", "size": 14},
+                {"text": "multiple", "size": 14},
+                {"text": "warnings", "size": 14},
+                {"text": "fail", "size": 14},
+                {"text": "assertionerror", "size": 14},
+                {"text": "filter", "size": 14},
+                {"text": "resolve", "size": 14},
+                {"text": "sensitive", "size": 14},
+                {"text": "deprecated", "size": 14},
+                {"text": "target", "size": 14},
+                {"text": "comments", "size": 14},
+                {"text": "interceptors", "size": 14},
+                {"text": "old", "size": 13},
+                {"text": "two", "size": 13},
+                {"text": "still", "size": 13},
+                {"text": "back", "size": 13},
+                {"text": "support", "size": 13},
+                {"text": "type", "size": 13},
+                {"text": "where", "size": 13},
+                {"text": "both", "size": 13},
+                {"text": "execution", "size": 13},
+                {"text": "fields", "size": 13},
+                {"text": "own", "size": 13},
+                {"text": "review", "size": 13}
+            ]}
+/*data_placeholder*/;
     var projectName = /*project_name_placeholder*/"some project"/*project_name_placeholder*/;
 
     createWordCloudOn("wordCloud");
@@ -35,8 +202,8 @@
     function createWordCloudOn(elementId) {
         var solidFill = d3.scale.category10();
         var mixedFill = d3.scale.category20();
-        var width = 1200;
-        var height = 900;
+        var width = 1000;
+        var height = 700;
 
         var rootElement = d3.select("#" + elementId);
         var header = appendBlockElementTo(rootElement, width);
@@ -66,7 +233,7 @@
                     .attr("width", width)
                     .attr("height", height)
                     .append("g")
-                    .attr("transform", "translate(" + width / 2.5 + "," + height / 2.5 + ")")
+                    .attr("transform", "translate(" + width / 2 + "," + height / 2.5 + ")")
                     .selectAll("text")
                     .data(words)
                     .enter().append("text")
