--- a/templates/wordcloud.html
+++ b/templates/wordcloud.html
@@ -219,6 +219,7 @@
             d3.layout.cloud()
                     .size([width, height])
                     .fontSize(function(d) { return d.size; })
+                    .font("Impact")
                     .rotate(function(d) { return 0; })
                     .words(data.words.map(function(d) {
                         return {text: d.text, size: d.size};
@@ -233,7 +234,7 @@
                     .attr("width", width)
                     .attr("height", height)
                     .append("g")
-                    .attr("transform", "translate(" + width / 2 + "," + height / 2.5 + ")")
+                    .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")")
                     .selectAll("text")
                     .data(words)
                     .enter().append("text")
