removed "float: left" from title style

--- a/templates/author-to-file-graph.html
+++ b/templates/author-to-file-graph.html
@@ -242,7 +242,7 @@ function createForcesGraphOn(elementId, graph) {
     }
 
     function appendBlockElementTo(element, width) {
-        return element.append("span").style({float: "left", display: "block", width: width + "px"});
+        return element.append("span").style({display: "block", width: width + "px"});
     }
 }
 
