--- a/templates/calendar-view.html
+++ b/templates/calendar-view.html
@@ -264,7 +264,7 @@ date,changeSize\n\
         }
 
         function appendBlockElementTo(element, width) {
-            return element.append("span").style({float: "left", display: "block", width: width + "px"});
+            return element.append("span").style({display: "block", width: width + "px"});
         }
     }
 
